[package]
name = "rhymuri"
version = "1.3.1"
description = "Implementation of IETF RFC 3986, Uniform Resource Identifier (URI)"
authors = ["Richard Walters <rwalters@digitalstirling.com>"]
edition = "2018"
license-file = "LICENSE.txt"
readme = "README.md"
categories = ["parser-implementations", "web-programming"]
keywords = ["uri", "parser"]
repository = "https://github.com/rhymu8354/Uri.git"
exclude = [
    "*.hpp",
    "*.cpp",
    "CMakeLists.txt",
    "notes.md"
]

[dependencies]
named_tuple = "0.1"
once_cell = "1.5"
thiserror = "1.0"
